<resources>
    <string name="app_name">Vehicle Servicing</string>
    <string name="menu_home">Home</string>

    <style name="menu_history">History</style>

    <string name="menu_profile">Profile </string>
    <string name="menu_gallery">About Us</string>
    <string name="menu_slideshow">Location </string>
    <string name="menu_tools">Privacy and Policy</string>
    <string name="menu_share">FAQ</string>
    <string name="menu_send">Logout</string>
    <string name="title_activity_maps">Map</string>

    <!--    <string name="menu_tools">Tools</string>-->
    <!--    <string name="menu_share">Share</string>-->
    <!--    <string name="menu_send">Send</string>-->
    <!--    <string name="title_activity_dashboard">DashboardActivity</string>-->
    <!--    <string name="navigation_drawer_open">Open navigation drawer</string>-->
    <!--    <string name="navigation_drawer_close">Close navigation drawer</string>-->
    <!--    <string name="nav_header_title">Android Studio</string>-->
    <!--    <string name="nav_header_subtitle">android.studio@android.com</string>-->
    <!--    <string name="nav_header_desc">Navigation header</string>-->
    <!--    <string name="action_settings">Settings</string>-->

    <!--    <string name="menu_home">Vehicles Servicing</string>-->
    <!--    <string name="menu_gallery">About Us</string>-->
    <!--    <string name="menu_slideshow">Contact Us</string>-->

</resources>
