<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="Privacy and Policy" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="FAQ" />

        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="Logout" />


    </group>

        </menu>


